fixed code so ui now jumps to section linked in nav, attmpted to add code to the work section to create a container

--- a/css.css
+++ b/css.css
@@ -77,9 +77,9 @@ li a {
   /* creates hover effect */
 
  li a:hover {
-        text-shadow: 2px 2px 10px darkgray;
+        text-shadow: 2px 2px 10px white;
       
-        filter: dropshadow(color=darkgray, offx=2, offy=2);
+        filter: dropshadow(color=white, offx=2, offy=2);
       }
 
     
@@ -132,14 +132,14 @@ h2{
     font-size: x-large;
   }
 body {
-    background-color:white;
+    background-color: white;
     border-top: black;
     border-top: 5px;
 }
 
 
 .left-text {
-  color:var(--main);
+  color:var(--secondary);
   margin-top: 9rem;
   font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin-left:50px;
@@ -163,6 +163,7 @@ input[type=submit] {
   border:none;
   border-radius: 4px;
   cursor: pointer;
+  display:block;
 }
 
 /* Hover effect*/
@@ -188,6 +189,12 @@ input[type=submit]:hover {
 
 .vertical{
   display:flex;
+}
+.container1{
+  width: 500px;
+  margin: auto;
+  border: 3px solid black;
+
 }
 
 /*section{
